<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Vista.TipoLogin">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <TextView
                android:id="@+id/d1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="25dp"
                android:layout_marginTop="54dp"
                android:text="@string/d3" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="146dp"
                android:layout_height="183dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="27dp"
                android:layout_marginTop="119dp"
                android:contentDescription="@string/ib"
                android:onClick="cliente"
                app:srcCompat="@mipmap/cliente" />

            <TextView
                android:id="@+id/d2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="26dp"
                android:layout_marginTop="328dp"
                android:layout_marginBottom="0dp"
                android:text="@string/cliente" />

            <TextView
                android:id="@+id/d3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="195dp"
                android:layout_marginTop="328dp"
                android:layout_marginBottom="0dp"
                android:text="@string/empresa" />

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="193dp"
                android:layout_height="192dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="186dp"
                android:layout_marginTop="117dp"
                android:contentDescription="@string/ib"
                android:onClick="empresa"
                app:srcCompat="@mipmap/empresa" />
        </RelativeLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>